<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{ed47b473-7368-40f8-b818-ce840659a8dc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    // Shared variables used by both tasks
    Global_AlarmSet : BOOL := FALSE;             // start alarm state
    Global_SnoozeCount : INT := 0;               // number of snoozes
    Global_StillTired : BOOL := TRUE;            // still tired flag

    Global_IsHungry : BOOL := TRUE;              // breakfast needed
    Global_NeedLunch : BOOL := FALSE;            // prepare lunch later
    Global_ToppingCount : INT := 0;              // current topping count for lunch

    Global_SpeculoosAvailable : BOOL := TRUE;
    Global_ChickenFiletAvailable : BOOL := TRUE;
    Global_PeanutButterAvailable : BOOL := TRUE;

    Global_TrafficLightRed : BOOL := FALSE;
    Global_BridgeOpen : BOOL := FALSE;
    Global_ToiletNeeded : BOOL := FALSE;

    Global_Delay : TIME := T#0S;                 // accumulated delay time
    Global_ProgramActive : BOOL := TRUE;         // overall program active

    Global_SharedCounter : INT := 0;             // example shared counter modified by both tasks
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>