<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="EVENTTRACKER" Id="{e5b7c6d3-2222-4b2b-d222-abcdef000002}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM EventTracker
VAR
    state : INT := 0;
    innerCount : INT := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// EventTracker: handles alarm/snooze, breakfast and lunch decisions
CASE state OF
    0: // initialize
        // ensure some starting conditions
        IF NOT GVL.Global_ProgramActive THEN
            GVL.Global_ProgramActive := TRUE;
        END_IF;
        state := 10;

    10: // Alarm / wake up handling
        IF GVL.Global_AlarmSet THEN
            IF GVL.Global_SnoozeCount < 2 AND GVL.Global_StillTired THEN
                // hit snooze
                GVL.Global_Delay := GVL.Global_Delay + T#5M;
                GVL.Global_SnoozeCount := GVL.Global_SnoozeCount + 1;
            ELSE
                // wake up
                GVL.Global_StillTired := FALSE;
                state := 20;
            END_IF;
        ELSE
            // natural wake up
            IF NOT GVL.Global_StillTired THEN
                state := 20;
            END_IF;
        END_IF;

    20: // Possible first toilet visit requested by events
        // set toilet flag; DelayTracker will perform the actual visit by calling ToiletStep
        IF NOT GVL.Global_ToiletNeeded THEN
            GVL.Global_ToiletNeeded := TRUE;
        END_IF;
        state := 30;

    30: // Breakfast
        IF GVL.Global_IsHungry THEN
            // simulate eating breakfast once
            GVL.Global_IsHungry := FALSE;
            // after breakfast, plan lunch
            GVL.Global_NeedLunch := TRUE;
        END_IF;
        state := 40;

    40: // Lunch preparation (choose up to 4 toppings)
        IF GVL.Global_NeedLunch THEN
            IF GVL.Global_ToppingCount < 4 THEN
                // try toppings in a simple order
                IF GVL.Global_SpeculoosAvailable AND (innerCount = 0) THEN
                    GVL.Global_ToppingCount := GVL.Global_ToppingCount + 1;
                ELSIF GVL.Global_ChickenFiletAvailable AND (innerCount = 1) THEN
                    GVL.Global_ToppingCount := GVL.Global_ToppingCount + 1;
                ELSIF GVL.Global_PeanutButterAvailable AND (innerCount = 2) THEN
                    GVL.Global_ToppingCount := GVL.Global_ToppingCount + 1;
                END_IF;
                innerCount := innerCount + 1;
                IF innerCount > 2 THEN
                    innerCount := 0;
                END_IF;
            ELSE
                // lunch finished
                GVL.Global_NeedLunch := FALSE;
            END_IF;
        END_IF;
        state := 50;

    50: // possible second toilet visit
        IF NOT GVL.Global_ToiletNeeded THEN
            GVL.Global_ToiletNeeded := TRUE;
        END_IF;
        state := 60;

    60: // Ready to leave: set transport conditions as examples (simulate)
        // These could be set by environment; here we keep defaults
        state := 70;

    70: // Completed main routine - keep monitoring small events
        // continue running, optionally toggle small variables
        state := 70;
END_CASE;

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>
